add correct null checking SSCS-11339