@@ -4,6 +4,7 @@ import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 import lombok.AllArgsConstructor;
@@ -27,13 +28,14 @@ public class JudicialUserPanel {
     @SuppressWarnings("unused")
     @JsonIgnore
     public List<JudicialUserBase> getAllPanelMembers() {
+        List<JudicialUserBase> allPanelMembers;
         if (nonNull(panelMembers)) {
-            List<JudicialUserBase> allPanelMembers = panelMembers.stream().map(CollectionItem::getValue).collect(Collectors.toList());
+            allPanelMembers = panelMembers.stream().map(CollectionItem::getValue).toList();
             allPanelMembers.add(0, assignedTo);
-
-            return allPanelMembers;
+        } else {
+            allPanelMembers = List.of(assignedTo);
         }
 
-        return List.of(assignedTo);
+        return allPanelMembers.stream().filter(Objects::nonNull).toList();
     }
 }
